--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ min-height: 100vh;
     font-family: 'Outfit',sans-serif;
     font-weight: 400;
     color: var(--stone-900);
+    /*!!!*/
     line-height: 2;
     margin: 0;
 
